--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 * {
-  font-family: Nunito, sans-serif;
+  font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
 }
 
 
@@ -91,4 +91,9 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+input:-webkit-autofill {
+  box-shadow: 0 0 0 1000px rgba(0,0,0,.22) inset !important;
+  -webkit-text-fill-color: #e8eefc !important;
 }
